--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,11 @@
   "Password" : "Пароль",
   "AlreadyRegistered" : "Уже зарегистрированы?",
   "ClickHere": "Нажмите сюда",
-  "ToLogIn": "чтобы войти"   
+  "ToLogIn": "чтобы войти",
+  "UserCreated" : "Пользователь создан!",
+
+  "SignIn" : "Войти",
+  "Login" : "Авторизоваться",
+  "DontHaveAccount" : "Ещё нет аккаунта?",
+  "ToRegister" : "чтобы зарегистроваться"
 }
