feat: translate StatsWidget

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,19 @@
 
   "SignIn" : "Войти",
   "Login" : "Авторизоваться",
-  "DontHaveAccount" : "Ещё нет аккаунта?",
-  "ToRegister" : "чтобы зарегистроваться"
+  "Logoff": "Выйти",
+  "DontHaveAccount" : "Ещё нет аккаунта? ",
+  "ToRegister" : " чтобы зарегистроваться",
+
+  "AboutApp" : "Об этом приложении",
+  "TheAim": "Цель этого приложения — помочь вам сосредоточиться на любой задаче, над которой вы работаете, например, на учебе, программировании или составлении записей. Это приложение основано на ",
+  "PomodoroTechnique" : "Технике «Помодоро»",
+  "WhichIs" : " которая является методом тайм-менеджмента, разработанная Франческо Чирилло.",
+  "WhatIsPomodoro" : "Что такое Техника «Помодоро»",
+  "ThePomodoroTechnique": "Техника «Помодоро» создана для более продуктивного способа работы и учебы. Она использует таймер для разбивки работы на интервалы, обычно по 25 минут, разделенными короткими перерывами.",
+
+  "EstimatedTime" : "Расчетное время",
+  "SpentTime": "Затраченное время",
+  "IncompletedTasks": "Незавершенные задачи",
+  "СompletedTasks": "Завершенные задачи"
 }
