--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,15 +2,28 @@
   "Register": "Register",
   "CreateNewAccount": "Create new account",
   "UserName": "User Name",
-  "Email" : "Email",
-  "Password" : "Password",
-  "AlreadyRegistered" : "Already registred?",
+  "Email": "Email",
+  "Password": "Password",
+  "AlreadyRegistered": "Already registred?",
   "ClickHere": "Click here",
   "ToLogIn": "to log in",
-  "UserCreated" : "User created!",
+  "UserCreated": "User created!",
 
-  "SignIn" : "Sign in",
-  "Login" : "Login",
-  "DontHaveAccount" : "Dont have an account?",
-  "ToRegister" : "to register"
+  "SignIn": "Sign in",
+  "Login": "Login",
+  "Logoff": "Logoff",
+  "DontHaveAccount": "Dont have an account? ",
+  "ToRegister": " to register",
+
+  "AboutApp": "About this App",
+  "TheAim": "The aim of this app is to help you focus on any task you are working on, such as study, coding, or writing. This app is inspired by ",
+  "PomodoroTechnique": "Pomodoro Technique",
+  "WhichIs": " which is a time management method developed by Francesco Cirillo",
+  "WhatIsPomodoro": "What is Pomodoro Technique?",
+  "ThePomodoroTechnique": "The Pomodoro Technique is created for a more productive way to work and study. It uses atimer to break down work into intervals, traditionally 25 minutes in length, separatedby short breaks.",
+
+  "EstimatedTime" : "Estimated Time",
+  "SpentTime": "SpentTime",
+  "IncompletedTasks": "Incompleted Tasks",
+  "СompletedTasks": "Сompleted Tasks"
 }
