--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,29 +1,36 @@
 {
   "Register": "Регистрация",
   "CreateNewAccount": "Создать новый аккаунт",
-  "UserName" : "Имя пользователя",
+  "UserName": "Имя пользователя",
   "Email": "Эл. почта",
-  "Password" : "Пароль",
-  "AlreadyRegistered" : "Уже зарегистрированы?",
+  "Password": "Пароль",
+  "AlreadyRegistered": "Уже зарегистрированы?",
   "ClickHere": "Нажмите сюда",
   "ToLogIn": "чтобы войти",
-  "UserCreated" : "Пользователь создан!",
+  "UserCreated": "Пользователь создан!",
 
-  "SignIn" : "Войти",
-  "Login" : "Авторизоваться",
+  "SignIn": "Войти",
+  "Login": "Авторизоваться",
   "Logoff": "Выйти",
-  "DontHaveAccount" : "Ещё нет аккаунта? ",
-  "ToRegister" : " чтобы зарегистроваться",
+  "DontHaveAccount": "Ещё нет аккаунта? ",
+  "ToRegister": " чтобы зарегистроваться",
 
-  "AboutApp" : "Об этом приложении",
+  "AboutApp": "Об этом приложении",
   "TheAim": "Цель этого приложения — помочь вам сосредоточиться на любой задаче, над которой вы работаете, например, на учебе, программировании или составлении записей. Это приложение основано на ",
-  "PomodoroTechnique" : "Технике «Помодоро»",
-  "WhichIs" : " которая является методом тайм-менеджмента, разработанная Франческо Чирилло.",
-  "WhatIsPomodoro" : "Что такое Техника «Помодоро»",
+  "PomodoroTechnique": "Технике «Помодоро»",
+  "WhichIs": " которая является методом тайм-менеджмента, разработанная Франческо Чирилло.",
+  "WhatIsPomodoro": "Что такое Техника «Помодоро»",
   "ThePomodoroTechnique": "Техника «Помодоро» создана для более продуктивного способа работы и учебы. Она использует таймер для разбивки работы на интервалы, обычно по 25 минут, разделенными короткими перерывами.",
 
-  "EstimatedTime" : "Расчетное время",
+  "EstimatedTime": "Расчетное время",
   "SpentTime": "Затраченное время",
   "IncompletedTasks": "Незавершенные задачи",
-  "СompletedTasks": "Завершенные задачи"
+  "СompletedTasks": "Завершенные задачи",
+
+  "Today": "Сегодня",
+  "Tomorrow": "Завтра",
+  "ThisWeek": "Эта неделя",
+  "ThisMonth": "Этот месяц",
+  "ThisYear": "Этот год",
+  "AllTime": "За все время"
 }
