feat: add logo in header. add animation to regform

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,7 +13,7 @@
   "Login": "Авторизоваться",
   "Logoff": "Выйти",
   "DontHaveAccount": "Ещё нет аккаунта? ",
-  "ToRegister": " чтобы зарегистроваться",
+  "ToRegister": " чтобы зарегистрироваться",
 
   "AboutApp": "Об этом приложении",
   "TheAim": "Цель этого приложения — помочь вам сосредоточиться на любой задаче, над которой вы работаете, например, на учебе, программировании или составлении записей. Это приложение основано на ",
