Feat/register form animate (#26)
* feat: add logo in header. add animation to regform

* feat: change styles for form

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,16 +4,16 @@
   "UserName": "Имя пользователя",
   "Email": "Эл. почта",
   "Password": "Пароль",
-  "AlreadyRegistered": "Уже зарегистрированы?",
-  "ClickHere": "Нажмите сюда",
-  "ToLogIn": "чтобы войти",
+  "AlreadyRegistered": "Уже зарегистрированы? ",
+  "ClickHere": " Нажмите сюда ",
+  "ToLogIn": " чтобы войти",
   "UserCreated": "Пользователь создан!",
 
   "SignIn": "Войти",
   "Login": "Авторизоваться",
   "Logoff": "Выйти",
   "DontHaveAccount": "Ещё нет аккаунта? ",
-  "ToRegister": " чтобы зарегистроваться",
+  "ToRegister": " чтобы зарегистрироваться",
 
   "AboutApp": "Об этом приложении",
   "TheAim": "Цель этого приложения — помочь вам сосредоточиться на любой задаче, над которой вы работаете, например, на учебе, программировании или составлении записей. Это приложение основано на ",
