--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -66,6 +66,9 @@
   "AlarmSound": "Звук сигнала",
   "AmbientSound": "Окружающий звук",
 
+  "LostPomodoroProgress": "Прогресс текущего томата будет потерян.",
+  "ChangeTaskConfirm": "Вы уверены, что хотите изменить задачу?",
+
   "Minutes": "Минут",
   "m": "м",
   "h": "ч",
