--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,7 +32,7 @@
   "ThisWeek": "This week",
   "ThisMonth": "This month",
   "ThisYear": "This year",
-  "AllTime": "All the time",
+  "AllTime": "All time",
 
   "AddTask": "Add task",
   "TaskList": "Task list",
