feat: add more mobile styles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,7 +25,7 @@
   "EstimatedTime": "Estimated time",
   "SpentTime": "Spent time",
   "IncompletedTasks": "Incompleted tasks",
-  "СompletedTasks": "Сompleted tasks",
+  "CompletedTasks": "Completed tasks",
 
   "Today": "Today",
   "Tomorrow": "Tomorrow",
