--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -25,7 +25,7 @@
   "EstimatedTime": "Расчетное время",
   "SpentTime": "Затраченное время",
   "IncompletedTasks": "Незавершенные задачи",
-  "СompletedTasks": "Завершенные задачи",
+  "CompletedTasks": "Завершенные задачи",
 
   "Today": "Сегодня",
   "Tomorrow": "Завтра",
